Add Contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -6,7 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to my website</h1>
-    <p>Welcome come one come all!</p>
+    <h1>Contact Me!</h1>
   </body>
 </html>
